Salesforce/Sales Cloud/Scenario_1/objects/Organization__c.object
<CustomObject>
    <fields>
        <fullName>NGO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NGO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Address__c</fullName>
        <label>Org Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Org_Code__c</fullName>
        <label>Org Code</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Org_Email__c</fullName>
        <label>Org Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MNC</fullName>
                </value>
                <value>
                    <fullName>LTD</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>PLC</fullName>
                </value>
                <value>
                    <fullName>SL</fullName>
                </value>
                <value>
                    <fullName>AMN</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                    <isActive>false</isActive>
                    <label>PA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Organization</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Org_Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SFDC_Queue_Organization</fullName>
        <filterScope>Queue</filterScope>
        <label>SFDC1 Queue</label>
        <queue>SFDC_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ORG-{0}</displayFormat>
        <label>Organization ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organizations</pluralLabel>
    <recordTypes>
        <fullName>Private_Limited</fullName>
        <active>true</active>
        <label>Private Limited</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>